[gd_scene load_steps=8 format=3 uid="uid://btaaswplsxax2"]

[ext_resource type="Script" path="res://Scripts/menu_difficulty.gd" id="1_1tpko"]
[ext_resource type="FontFile" uid="uid://ccq3aw4j4we1e" path="res://Fonts/Fira Sans/FiraSans-Regular.ttf" id="2_23iyf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h14g1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kfokm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xh3gb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q873b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fnp4i"]

[node name="MenuDifficulty" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1080.0
offset_right = 1080.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_1tpko")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 15

[node name="EasyButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_23iyf")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_h14g1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kfokm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xh3gb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_q873b")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fnp4i")
text = "Easy       "
alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 15

[node name="MediumButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_23iyf")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_h14g1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kfokm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xh3gb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_q873b")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fnp4i")
text = "Medium       "
alignment = 2

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 15

[node name="HardButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_23iyf")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_h14g1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kfokm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xh3gb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_q873b")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fnp4i")
text = "Hard       "
alignment = 2

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 75
theme_override_constants/margin_bottom = 15

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_23iyf")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_h14g1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kfokm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xh3gb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_q873b")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fnp4i")
text = "Back       "
alignment = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer4/BackButton" to="." method="_on_back_button_pressed"]
